--- a/head/acknowledgements.tex
+++ b/head/acknowledgements.tex
@@ -2,17 +2,18 @@
 \markboth{Acknowledgements}{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}
 
-Pausing for a moment to recognize others' contributions to your personal development makes you realize how life unfolds in intertwined, intricate ways.
-
-Writing this thesis and defending my PhD would not have been possible if it were not for professor Colin Jones. I am sincerely grateful for your having invited me to join LA back in 2018, for your having given me the opportunity to develop my work in such a bright research environment. Your always-positive and light-weight approach to work was much appreciated, along with your talent to constantly brig forth new ideas. Thank you for all, truly.
-
-Here's to all other professors and the defense committee...
-
-LA is a great place to do your PhD at. The group is diverse and amicable, people are intellectually bright, and the overall atmosphere is on point. I am indebted to Mr. Harsh Ambarishkumar Shukla for being an awesome friend, for all the long talks about every possible subject one could imagine, most often accompanied by one drink or two. Throughout this journey, Yingzhao Lian has been my PhD twin, always making provocative research remarks and sharing his wine and food expertise with remarkable excitement. Paul Scharnhorst's contributions were mainly in two forms: being a key collaborator with whom the main theoretical results covered herein were derived, and constituting the Bienne-Nêuchatel alliance that organized quite a number of dinners ending in Qwirkle matches. My time spent at the office would have not been as interesting without Mustafa Turan, for listening to my never-ending semi-philosophical blabbers and for being always ready to talk about the latest and greatest recipe. Cite Pulkit, Alessio, Sohail, Philippe, Clara, J1, J2, 
-
-The foremost group is certainly my fiancee and my family. I have an immense respect for my parents who have risen their children ensuring the absorption of important core values, including mutual respect, fairness and empathy.  To this day, I look up to you. \textit{Muito obrigado por tudo}, Bruno, Erica, Fabio and Renato. Since we met, 
-
-I am grateful for having met truly special people during my Bachelor studies who encouraged me to go beyond what seemed to be our limits at the time. In particular I wish to thank prof. Ruben Barros Godoy who played a fundamental role in my early academic years. 
+To be written... 
+%Pausing for a moment to recognize others' contributions to your personal development makes you realize how life unfolds in intertwined, intricate ways.
+%
+%Writing this thesis and defending my PhD would not have been possible if it were not for professor Colin Jones. I am sincerely grateful for your having invited me to join LA back in 2018, for your having given me the opportunity to develop my work in such a bright research environment. Your always-positive and light-weight approach to work was much appreciated, along with your talent to constantly brig forth new ideas. Thank you for all, truly.
+%
+%Here's to all other professors and the defense committee...
+%
+%LA is a great place to do your PhD at. The group is diverse and amicable, people are intellectually bright, and the overall atmosphere is on point. I am indebted to Mr. Harsh Ambarishkumar Shukla for being an awesome friend, for all the long talks about every possible subject one could imagine, most often accompanied by one drink or two. Throughout this journey, Yingzhao Lian has been my PhD twin, always making provocative research remarks and sharing his wine and food expertise with remarkable excitement. Paul Scharnhorst's contributions were mainly in two forms: being a key collaborator with whom the main theoretical results covered herein were derived, and constituting the Bienne-Nêuchatel alliance that organized quite a number of dinners ending in Qwirkle matches. My time spent at the office would have not been as interesting without Mustafa Turan, for listening to my never-ending semi-philosophical blabbers and for being always ready to talk about the latest and greatest recipe. Cite Pulkit, Alessio, Sohail, Philippe, Clara, J1, J2, 
+%
+%The foremost group is certainly my fiancee and my family. I have an immense respect for my parents who have risen their children ensuring the absorption of important core values, including mutual respect, fairness and empathy.  To this day, I look up to you. \textit{Muito obrigado por tudo}, Bruno, Erica, Fabio and Renato. Since we met, 
+%
+%I am grateful for having met truly special people during my Bachelor studies who encouraged me to go beyond what seemed to be our limits at the time. In particular I wish to thank prof. Ruben Barros Godoy who played a fundamental role in my early academic years. 
 
 
 \bigskip
