--- a/head/settings_custom.tex
+++ b/head/settings_custom.tex
@@ -30,6 +30,7 @@
 \usepackage{multirow,booktabs}
 
 %\usepackage{empheq}
+\usepackage{afterpage}
 \usepackage{amsmath}
 \usepackage{empheq}
 \usepackage[most]{tcolorbox}
@@ -42,6 +43,7 @@
 \usepackage{bm}
 \usepackage{rotating}
 \usepackage{lscape}
+\usepackage{makecell}
 
 \usepackage{placeins}
 
