--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -593,6 +593,252 @@
 	year={2017}
 }
 
+@article{matthews2017gpflow,
+	title={GPflow: A Gaussian Process Library using TensorFlow.},
+	author={Matthews, Alexander G de G and Van Der Wilk, Mark and Nickson, Tom and Fujii, Keisuke and Boukouvalas, Alexis and Le{\'o}n-Villagr{\'a}, Pablo and Ghahramani, Zoubin and Hensman, James},
+	journal={J. Mach. Learn. Res.},
+	volume={18},
+	number={40},
+	pages={1--6},
+	year={2017}
+}
+
+@article{parisini1995receding,
+	title={A receding-horizon regulator for nonlinear systems and a neural approximation},
+	author={Parisini, Thomas and Zoppoli, Riccardo},
+	journal={Automatica},
+	volume={31},
+	number={10},
+	pages={1443--1451},
+	year={1995},
+	publisher={Elsevier}
+}
+
+@article{bemporad2002explicit,
+	title={The explicit linear quadratic regulator for constrained systems},
+	author={Bemporad, Alberto and Morari, Manfred and Dua, Vivek and Pistikopoulos, Efstratios N},
+	journal={Automatica},
+	volume={38},
+	number={1},
+	pages={3--20},
+	year={2002},
+	publisher={Elsevier}
+}
+
+@inproceedings{herceg2013multi,
+	title={Multi-parametric toolbox 3.0},
+	author={Herceg, Martin and Kvasnica, Michal and Jones, Colin N and Morari, Manfred},
+	booktitle={2013 European control conference (ECC)},
+	pages={502--510},
+	year={2013},
+	organization={IEEE}
+}
+
+
+@book{borrelli2017predictive,
+	title={Predictive control for linear and hybrid systems},
+	author={Borrelli, Francesco and Bemporad, Alberto and Morari, Manfred},
+	year={2017},
+	publisher={Cambridge University Press}
+}
+
+
+@article{virtanen2020scipy,
+	title={SciPy 1.0: fundamental algorithms for scientific computing in Python},
+	author={Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E and Haberland, Matt and Reddy, Tyler and Cournapeau, David and Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and Bright, Jonathan and others},
+	journal={Nature methods},
+	volume={17},
+	number={3},
+	pages={261--272},
+	year={2020},
+	publisher={Nature Publishing Group}
+}
+
+@article{mariethoz2008explicit,
+	title={Explicit model-predictive control of a PWM inverter with an LCL filter},
+	author={Mari{\'e}thoz, S{\'e}bastien and Morari, Manfred},
+	journal={IEEE Transactions on Industrial Electronics},
+	volume={56},
+	number={2},
+	pages={389--399},
+	year={2008},
+	publisher={IEEE}
+}
+
+@article{wen2009analytical,
+	title={Analytical expression of explicit MPC solution via lattice piecewise-affine function},
+	author={Wen, Chengtao and Ma, Xiaoyan and Ydstie, B Erik},
+	journal={Automatica},
+	volume={45},
+	number={4},
+	pages={910--917},
+	year={2009},
+	publisher={Elsevier}
+}
+
+@article{geyer2008optimal,
+	title={Optimal complexity reduction of polyhedral piecewise affine systems},
+	author={Geyer, Tobias and Torrisi, Fabio D and Morari, Manfred},
+	journal={Automatica},
+	volume={44},
+	number={7},
+	pages={1728--1740},
+	year={2008},
+	publisher={Elsevier}
+}
+
+@inproceedings{christophersen2007controller,
+	title={Controller complexity reduction for piecewise affine systems through safe region elimination},
+	author={Christophersen, Frank J and Zeilinger, Melanie N and Jones, Colin N and Morari, Manfred},
+	booktitle={2007 46th IEEE Conference on Decision and Control},
+	pages={4773--4778},
+	year={2007},
+	organization={IEEE}
+}
+
+@article{maddalena2019robust,
+	title={Robust region elimination for piecewise affine control laws},
+	author={Maddalena, Emilio Tanowe and Galv{\~a}o, Roberto Kawakami Harrop and Afonso, Rubens Junqueira Magalh{\~a}es},
+	journal={Automatica},
+	volume={99},
+	pages={333--337},
+	year={2019},
+	publisher={Elsevier}
+}
+
+@article{karg2020efficient,
+	title={Efficient representation and approximation of model predictive control laws via deep learning},
+	author={Karg, Benjamin and Lucia, Sergio},
+	journal={IEEE Transactions on Cybernetics},
+	volume={50},
+	number={9},
+	pages={3866--3878},
+	year={2020},
+	publisher={IEEE}
+}
+
+@article{schwan2022stability,
+	title={Stability Verification of Neural Network Controllers using Mixed-Integer Programming},
+	author={Schwan, Roland and Jones, Colin N and Kuhn, Daniel},
+	journal={arXiv preprint arXiv:2206.13374},
+	year={2022}
+}
+
+@article{fazlyab2020safety,
+	title={Safety verification and robustness analysis of neural networks via quadratic constraints and semidefinite programming},
+	author={Fazlyab, Mahyar and Morari, Manfred and Pappas, George J},
+	journal={IEEE Transactions on Automatic Control},
+	year={2020},
+	publisher={IEEE}
+}
+
+@article{maddalena2020neural,
+	title={A neural network architecture to learn explicit MPC controllers from data},
+	author={Maddalena, Emilio Tanowe and Moraes, CG da S and Waltrich, Gierri and Jones, Colin N},
+	journal={IFAC-PapersOnLine},
+	volume={53},
+	number={2},
+	pages={11362--11367},
+	year={2020},
+	publisher={Elsevier}
+}
+
+@article{maddalena2021embedded,
+	title={Embedded PWM predictive control of DC-DC power converters via piecewise-affine neural networks},
+	author={Maddalena, Emilio T and Specq, Martin WF and Wisniewski, Viviane L and Jones, Colin N},
+	journal={IEEE Open Journal of the Industrial Electronics Society},
+	volume={2},
+	pages={199--206},
+	year={2021},
+	publisher={IEEE}
+}
+
+@inproceedings{amos2017optnet,
+	title={Optnet: Differentiable optimization as a layer in neural networks},
+	author={Amos, Brandon and Kolter, J Zico},
+	booktitle={International Conference on Machine Learning},
+	pages={136--145},
+	year={2017},
+	organization={PMLR}
+}
+
+@article{agrawal2019differentiable,
+	title={Differentiable convex optimization layers},
+	author={Agrawal, Akshay and Amos, Brandon and Barratt, Shane and Boyd, Stephen and Diamond, Steven and Kolter, J Zico},
+	journal={Advances in neural information processing systems},
+	volume={32},
+	year={2019}
+}
+
+
+@article{paulson2020approximate,
+	title={Approximate closed-loop robust model predictive control with guaranteed stability and constraint satisfaction},
+	author={Paulson, Joel A and Mesbah, Ali},
+	journal={IEEE Control Systems Letters},
+	volume={4},
+	number={3},
+	pages={719--724},
+	year={2020},
+	publisher={IEEE}
+}
+
+
+@article{kumar2021industrial,
+	title={Industrial, large-scale model predictive control with structured neural networks},
+	author={Kumar, Pratyush and Rawlings, James B and Wright, Stephen J},
+	journal={Computers \& Chemical Engineering},
+	volume={150},
+	pages={107291},
+	year={2021},
+	publisher={Elsevier}
+}
+
+
+@inproceedings{jones2008double,
+	title={The double description method for the approximation of explicit MPC control laws},
+	author={Jones, Colin N and Morari, Manfred},
+	booktitle={2008 47th IEEE Conference on Decision and Control},
+	pages={4724--4730},
+	year={2008},
+	organization={IEEE}
+}
+
+@article{naus2010design,
+	title={Design and implementation of parameterized adaptive cruise control: An explicit model predictive control approach},
+	author={Naus, GJL and Ploeg, Jeroen and Van de Molengraft, MJG and Heemels, WPMH and Steinbuch, Maarten},
+	journal={Control Engineering Practice},
+	volume={18},
+	number={8},
+	pages={882--892},
+	year={2010},
+	publisher={Elsevier}
+}
+
+@incollection{alessio2009survey,
+	title={A survey on explicit model predictive control},
+	author={Alessio, Alessandro and Bemporad, Alberto},
+	booktitle={Nonlinear model predictive control},
+	pages={345--369},
+	year={2009},
+	publisher={Springer}
+}
+
+
+@article{mchutchon2011gaussian,
+	title={Gaussian process training with input noise},
+	author={McHutchon, Andrew and Rasmussen, Carl},
+	journal={Advances in Neural Information Processing Systems},
+	volume={24},
+	year={2011}
+}
+
+@book{girard2004approximate,
+	title={Approximate methods for propagation of uncertainty with Gaussian process models},
+	author={Girard, Agathe},
+	year={2004},
+	publisher={University of Glasgow}
+}
+
 @article{berntorp2021online,
 	title={Online Bayesian inference and learning of Gaussian-process state--space models},
 	author={Berntorp, Karl},
