--- a/main/chap4_pqp_nn.tex
+++ b/main/chap4_pqp_nn.tex
@@ -2,80 +2,100 @@
 \chapter{Learning MPC controllers with pQP neural networks}
 \markboth{Learning MPC controllers with pQP neural networks}{Learning MPC controllers with pQP neural networks}
 
-In this chapter, we ...
+\section{Introduction}
 
-\section{pQP neural networks}
-
-\section{Learning linear MPC controllers with pQP neural networks}
-
-Consider the following standard MPC formulation for linear dynamical systems
+Consider the standard MPC formulation for linear dynamical systems
 \begin{subequations}
-	\label{eq:mpcFormulation}
+	\label{eq:linearmpc}
 	\begin{align}
 		%\mathds{P}1: \min_{X,U} \quad & q(x_H) + \sum_{k=1}^{H-1} l(x_k,u_k) \\
-		\mathds{P}1: \min_{X,U} \quad & \sum_{k=0}^{H-1} \big( x_k' Q x_k + u_k' R u_k \big) + x_H' P x_H\\
-		\text{s.t.} \quad & \forall k = 0,\dots,H-1 \\
-		& x_{k+1} = A x_{k} + B u_{k} \\
-		& x_{k} \in \mathbb{X} \\
-		& u_{k} \in \mathbb{U} \\
-		& x_{H} \in \mathbb{X}_H \\
+		\mathds{P}1: \min_{X,U} \quad & \sum_{k=0}^{N-1} \big( x_k^\top Q x_k + u_k^\top R u_k \big) + x_N^\top P x_N\\
+		\text{subj. to} \quad 
+		& x_{k+1} = A x_{k} + B u_{k}, \, \forall k = 0,\dots,N-1  \\
+		& x_{k} \in \mathbb{X}, \, \forall k = 0,\dots,N-1 \\
+		& u_{k} \in \mathbb{U}, \, \forall k = 0,\dots,N-1 \\
+		& x_{H} \in \mathbb{X}_N \\
 		& x_0 = x(0)
 	\end{align}
 \end{subequations}
-where $X:=\{x_1,\dots,x_{H}\}$, $U:=\{u_0,\dots,u_{H-1}\}$, $Q \succeq 0$, $P \succeq 0$, $R \succ 0$, and the constraints are all described by affine equalities and inequalities. Denote by $\pi: \mathcal{X} \rightarrow \mathcal{U}$ the optimal solution of \eqref{eq:mpcFormulation} in its parametric form with respect to the initial conditions $x(0)$, where $\mathcal{X} \subseteq \mathbb{R}^n$ is the feasible state space of $\mathds{P}1$ and $\mathcal{U} \subseteq \mathbb{R}^m$ is the control space. We assume a set of $N$ samples can be acquired from the original control law\footnote{The dataset can also be directly obtained from the implicit controller; depending on the size of the problem at hand, computing the explicit solution might be intractable.}
-\begin{subequations}
-	\begin{align}
-		& D = \{\text{x}_i,\text{u}_i\}_{i=1}^{N} \\[3pt]
-		& \text{u}_i = \pi(\text{x}_i), \; i=1,\dots,N
-	\end{align}
-\end{subequations}
-The process of acquiring the training dataset does not have to follow a particular distribution, nor do the samples have to be independent.
+where $x_k \in \mathbb{R}^{n_x}$, $u_k \in \mathbb{R}^{n_u}$, for all $k$; $X:=\{x_1,\dots,x_{N}\}$ and $U:=\{u_0,\dots,u_{N-1}\}$ are the collections of decision variables; $Q \succeq 0$, $R \succeq 0$ and $P \succ 0$ are cost matrices of adequate size; and the sets $\mathbb{X}$, $\mathbb{X}_N$ and $\mathbb{U}$ are polyhedra. Also, denote by 
+\begin{equation}
+	\pi: \mathcal{X} \rightarrow \mathbb{U}, \quad x(0) \mapsto \pi(x(0)) = u_0^\star
+\end{equation} 
+the mapping defined point-wise from the parameter $x(0)$ of $\mathds{P}1$ to the first control component of its optimizer\footnote{Since the objective is strictly convex and the constraints define a convex feasible set, if an optimizer exists for a given parameter $x(0)$, then this optimizer is unique.}. The domain $\mathcal{X} \subset \mathbb{R}^{n_x}$ is the collection of all $x(0)$ for which $\mathds{P}1$ is finite, i.e., the problem is feasible. It is well-known that, under reasonable standard on the terminal ingredients $P$ and $\mathbb{X}_N$, the map $\pi$ is a piece-wise affine continuous function over a polyhedral partition of the polyhedron $\mathcal{X}$ \citep{bemporad2002explicit,borrelli2017predictive}. 
 
+Automatic control involves real-time decision making and, in a number of different scenarios, it becomes infeasible or simply undesirable to solve an optimization problem such as \eqref{eq:linearmpc} on-line. Picture, for instance, a small embedded system that does not have enough computational resources to arrive at a solution within the time allocated to it. One method to circumvent solving $\mathds{P}1$ is to seek $\pi$, which can explicitly written in closed form with multi-parametric programming tools \citep{bemporad2002explicit}. This approach is known as explicit MPC and has become an establish control tool \citep{mariethoz2008explicit,naus2010design} for which free software exists \citep{herceg2013multi}. Unfortunately, $\pi$ can also be challenging both to compute and to store as the number of regions of its domain grows exponentially in the worst case with the number of inequality constraints in $\mathds{P}1$ \citep{alessio2009survey}, thus limiting its applicability. Simplifications strategies for explicit MPC exist, each coming with a different set (sometimes empty) of guarantees. In \cite{geyer2008optimal} and \cite{wen2009analytical}, for example, the authors build equivalent but more convenient representations of the control policy; in \cite{jones2008double} an incremental method is proposed to fit $\pi$ without requiring its explicit description; and in \cite{christophersen2007controller} and \cite{maddalena2019robust} safe elimination procedures are presented to drop certain regions without disrupting certain closed-loop properties.
+
+%We assume a set of $N$ samples can be acquired from the original control law\footnote{The dataset can also be directly obtained from the implicit controller; depending on the size of the problem at hand, computing the explicit solution might be intractable.}
+%\begin{subequations}
+%	\begin{align}
+%		& D = \{\text{x}_i,\text{u}_i\}_{i=1}^{N} \\[3pt]
+%		& \text{u}_i = \pi(\text{x}_i), \; i=1,\dots,N
+%	\end{align}
+%\end{subequations}
+%The process of acquiring the training dataset does not have to follow a particular distribution, nor do the samples have to be independent.
+
+With the recent popularization of deep learning and the plethora of easy-to-use toolboxes available to users, neural network (NN) approximations of the map linking the current state $x(0)$ to the MPC optimal control action $u_0^\star$ have also become trendy (see e.g. \cite{karg2020efficient,kumar2021industrial}). Although the idea itself is not new \citep{parisini1995receding}, the latest investigations tend to make use of more modern analysis and synthesis tools such as better activation functions and training algorithms. The works \cite{fazlyab2020safety} and \cite{schwan2022stability} address the problem of verifying a NN approximation a posteriori, employing respectively semi-definite and mixed-integer linear programming techniques. On a different spirit, \cite{paulson2020approximate} tackles designing NNs that approximate predictive controllers and are safe by design. Arguably the main motivation behind this entire line of research is the expressive power of NNs, especially when deep architectures are employed \cite{karg2020efficient}, and the fact that they lie in the same class of piece-wise affine (PWA) functions as MPC controllers\footnote{As long as a PWA activation function such as the rectified linear unit (ReLU) is used.}.
+
+As opposed to the previously cited works where rather multi-purpose NN architectures were used, we will explore a structure that is tailored to the problem $\mathds{P}1$ and its solution $\pi$. Our proposal, which was published in \cite{maddalena2020neural} and \cite{maddalena2021embedded}, revolves around utilizing convex programs as layers within neural networks as proposed in \cite{amos2017optnet} and \cite{agrawal2019differentiable}. More specifically, the parameter to optimizer map of a convex program is employed as an internal layer, offering a particular inductive bias. A shallow architecture is proposed and shown to be able to represent the map $\pi$ of any predictive controller \eqref{eq:linearmpc} given a sufficiently large size. Finally, two examples are presented in the area of power electronics, allowing for a drastic speed-up in computation times with only a minor performance degradation.
+	
 \subsection{The proposed architecture}
 
-The key idea behind the proposed approximator is the use of a parametric quadratic program layer as part of the Neural Network, and optimizing over its parameters in order to fit the available dataset. This layer is implicitly described by the quadratic program
+An illustration of the parametric quadratic program (pQP) neural network is shown in Figure~\ref{fig:nnArchitecture}. It is composed of two linear layers (L1 and L3), a single non-linear layer with adjustable parameters (L2), and a fixed output layer (L4). The central part of this structure is the pQP layer L2, which is an implicit function described by the optimization model
+%The key idea behind the proposed approximator is the use of a parametric quadratic program layer as part of the Neural Network, and optimizing over its parameters in order to fit the available dataset. This layer is implicitly described by the quadratic program
 \begin{equation}
 	\label{eq:pQP}
-	z^\star = \text{arg }\min_{z \geq 0} \; ||Lz + y_1(x)||^{2} + \epsilon ||z||^2
+	y_2 = \text{arg}\,\min_{z \geq 0} \; ||Hz + y_1||^{2} + \epsilon ||z||^2
 \end{equation}
-which is \textit{always feasible} and \textit{bounded from below}. The size of this mathematical program, i.e. the dimension of $z$, can be tuned to attain approximations with different complexity. Moreover, as notation suggests, the parameter $y_1$ depends on a previous affine layer that maps the system states into the $z$ space, $y_1 := Fx + f$. Let $y_2 := z^{\star}$, then another affine layer maps the optimal solution to the input space $y_3 := Gy_2 + g$, and a projection onto the feasible input set produces the final control action $\hat{u} := \text{Proj}_{\, \mathbb{U}}(y_2)$. This last step is necessary to guarantee feasibility of the control moves (see e.g. \cite{chen2018approximating}). An illustration of the proposed architecture is presented in Fig.~\ref{fig:nnArchitecture}, where the projection layer was particularized to a familiar element-wise saturation operation $\text{sat}(\cdot)$, valid for box input constraints.
+that has $y_1$, the output of layer L1, as a parameter; the optimizer $y_2$ is then a function of $y_1$. Note how \eqref{eq:pQP} is always feasible and bounded from below, thus well posed for any $y_1$. The regularizing constant $\epsilon > 0$ is a fixed parameter that contributes with the numerical stability of the scheme. Additionally, if $\epsilon > 0$, then \eqref{eq:pQP} has always a unique minimizer and thus the map $y_1 \mapsto y_2$ is well defined.
 
-%\begin{figure}[t]
-%	\begin{center}
-%		\includegraphics[width=7cm]{IFAC-NN}    % The printed column width is 8.4 cm.
-%		\caption{An illustration of the NN eMPC controller approximator. The parameters to be optimized are shown on the left-hand side.}
-%		\label{fig:nnArchitecture}
-%	\end{center}
-%\end{figure}
+Intuitively, one can think of the first layer L1 as a lifting, or projection, of the current state $x \in \mathbb{R}^{n_x}$ onto another space $\mathbb{R}^{n_z}$ whose dimension is a NN hyperparameter to be chosen by the user. L2 then is the key non-linear transformation that should capture most of the MPC policy complexity. Next, the affine map in L3 takes the $y_2$ value to the input space $\mathbb{R}^{n_u}$ and finally the control actions are guaranteed to satisfy the control constraints by projecting them onto $\mathbb{U}$, which is accomplished by L4 (see \eqref{def.pol_proj}). By adjusting $n_z$, the designer increases or reduces the representation power of the pQP NN although its size remains constant.
+%which is \textit{always feasible} and \textit{bounded from below}. The size of this mathematical program, i.e. the dimension of $z$, can be tuned to attain approximations with different complexity. Moreover, as notation suggests, the parameter $y_1$ depends on a previous affine layer that maps the system states into the $z$ space, $y_1 := Fx + f$. Let $y_2 := z^{\star}$, then another affine layer maps the optimal solution to the input space $y_3 := Gy_2 + g$, and a projection onto the feasible input set produces the final control action $\hat{u} := \text{Proj}_{\, \mathbb{U}}(y_2)$. This last step is necessary to guarantee feasibility of the control moves (see e.g. \cite{chen2018approximating}). An illustration of the proposed architecture is presented in Fig.~\ref{fig:nnArchitecture}, where the projection layer was particularized to a familiar element-wise saturation operation $\text{sat}(\cdot)$, valid for box input constraints.
 
-Let the chosen number of decision variables in the pQP be $z \in \mathbb{R}^{n_z}$. We choose $L \in \mathbb{R}^{n_z \times n_z}$ to be square, and therefore $F \in \mathbb{R}^{n_z \times n}$, $f \in \mathbb{R}^{n_z}$. Moreover, $G \in \mathbb{R}^{m \times n_z}$ and $g \in \mathbb{R}^{m}$. If $n_z \ge n$, the first layer lifts the input data into a higher dimensional space before it is passed through the optimization layer. A last affine function then projects it onto the control space. These facts will be later employed to analyze the representative power of the network.
+\begin{figure}[t!]
+	\begin{center}
+		\includegraphics[scale=0.8]{../images/chap4_nn_arch.pdf}  
+		\caption{A pQP neural network architecture tailored to MPC. The variables in red are weights to be adjusted during training.}
+		\label{fig:nnArchitecture}
+	\end{center}
+\end{figure}
 
-The parameters to be trained are therefore $F$, $f$, $L$, $G$ and $g$. This process can be carried out via a stochastic gradient descent algorithm applied to an appropriate loss function. Differentiability of all layers is trivial with the exception of the pQP one \citep{gould2016differentiating,amos2017optnet}. Regarding the latter, note that the objective in \eqref{eq:pQP} can be rewritten as
+%Let the chosen number of decision variables in the pQP be $z \in \mathbb{R}^{n_z}$. We choose $L \in \mathbb{R}^{n_z \times n_z}$ to be square, and therefore $F \in \mathbb{R}^{n_z \times n}$, $f \in \mathbb{R}^{n_z}$. Moreover, $G \in \mathbb{R}^{m \times n_z}$ and $g \in \mathbb{R}^{m}$. If $n_z \ge n$, the first layer lifts the input data into a higher dimensional space before it is passed through the optimization layer. A last affine function then projects it onto the control space. These facts will be later employed to analyze the representative power of the network.
+Let $\hat\pi : x \mapsto u$ be the pQP NN map defined by the composition of the layers in Figure~\ref{fig:nnArchitecture}, and whose parameters to be trained are $F \in \mathbb{R}^{n_z \times n_x}$, $f \in \mathbb{R}^{n_z}$, $H \in \mathbb{R}^{n_z \times n_z}$, $G \in \mathbb{R}^{n_u \times n_z}$ and $g \in \mathbb{R}^{n_u}$. The final goal is to tune these to fit a dataset of the form 
 \begin{equation}
-	\label{eq:idk}
-	V(z) := z'(\epsilon I + L'L)z + (2L'y_1(x))' \, z + y_1(x)'y_1(x)
+	\{(x(0)_i, u_{0,i}^\star)\}_{i=1}^d
 \end{equation}
-whose Lagrangian is simply
-\begin{equation}
-	\mathcal{L}(z,\lambda) = V(z) - \lambda'z
-\end{equation}
-The Karush-Kuhn-Tucker (KKT) conditions for primal and dual feasibility, complementary slackness, and stationarity then read 
-\begin{subequations}
-	\label{eq:kkt}
-	\begin{align}
-		& z^\star \geq 0 \\
-		& \lambda^\star \geq 0 \\
-		& \lambda_i^\star z_i^\star = 0, \ \forall i = 1,\dots,n_z \\
-		& 2(\epsilon I + L'L)z^\star + (2L'y_1(x)) - \lambda^\star = 0
-	\end{align}
-\end{subequations}
-where $\lambda_i$ and $z_i$ denote the components of the Lagrange multipliers and decision variables vectors. The following proposition presents the differentiability properties of the pQP layer, and holds since \eqref{eq:pQP} is a particular instance of the \texttt{OptNet} layer \citep{amos2017optnet} with strictly convex objective function.
+composed of initial conditions $x(0)$ and the first optimal control action $u_0^\star$ coming from \eqref{eq:linearmpc}. Typically, this is done by defining a suitable loss function and minimizing the mismatch between $\hat\pi(x(0))$ and $u^\star_0$, i.e., the control action produced by the pQP NN and the target optimal value. The parameters are then tuned by means of a gradient-based  backpropagation procedure. 
 
-\begin{proposition}
-	Let $\theta := (L,y_1)$. The parametric solution $z^\star(\theta)$ of \eqref{eq:pQP} is subdifferentiable everywhere in its domain, i.e., $\partial z^\star(\theta) \neq \{ \, \}$, and $\partial z^\star(\theta)$ has a unique element (the jacobian) everywhere but in a set of measure zero.
-\end{proposition}
+\begin{remark}
+	As shown in \cite[Theorem~1]{amos2017optnet}, OptNet layers are differentiable everywhere, but not in a set of measure zero of parameters, where subgradients exist. Since \eqref{eq:pQP} is a particular instance of the OptNet layer, it inherits its properties. Moreover, we assume the set of feasible control actions $\mathbb{U}$ to be a polyhedron. The projection operator in L4 is therefore a quadratic program with $y_3$ as its only parameter and, thus, also an OptNet layer.
+\end{remark}
 
-As shown in \cite{amos2017optnet}, the relevant gradients with respect to the parameters to be trained can be obtained from the KKT set of equations \eqref{eq:kkt}. Hence, backward passes are possible and backpropagation can be performed to optimize all of the NN parameters.
+%This process can be carried out via a stochastic gradient descent algorithm applied to an appropriate loss function. Differentiability of all layers is trivial with the exception of the pQP one \citep{gould2016differentiating,amos2017optnet}. Regarding the latter, note that the objective in \eqref{eq:pQP} can be rewritten as
+%\begin{equation}
+%	\label{eq:idk}
+%	V(z) := z'(\epsilon I + L'L)z + (2L'y_1(x))' \, z + y_1(x)'y_1(x)
+%\end{equation}
+%whose Lagrangian is simply
+%\begin{equation}
+%	\mathcal{L}(z,\lambda) = V(z) - \lambda'z
+%\end{equation}
+%The Karush-Kuhn-Tucker (KKT) conditions for primal and dual feasibility, complementary slackness, and stationarity then read 
+%\begin{subequations}
+%	\label{eq:kkt}
+%	\begin{align}
+%		& z^\star \geq 0 \\
+%		& \lambda^\star \geq 0 \\
+%		& \lambda_i^\star z_i^\star = 0, \ \forall i = 1,\dots,n_z \\
+%		& 2(\epsilon I + L'L)z^\star + (2L'y_1(x)) - \lambda^\star = 0
+%	\end{align}
+%\end{subequations}
+%where $\lambda_i$ and $z_i$ denote the components of the Lagrange multipliers and decision variables vectors. The following proposition presents the differentiability properties of the pQP layer, and holds since \eqref{eq:pQP} is a particular instance of the \texttt{OptNet} layer \citep{amos2017optnet} with strictly convex objective function.
+%
+%\begin{proposition}
+%	Let $\theta := (L,y_1)$. The parametric solution $z^\star(\theta)$ of \eqref{eq:pQP} is subdifferentiable everywhere in its domain, i.e., $\partial z^\star(\theta) \neq \{ \, \}$, and $\partial z^\star(\theta)$ has a unique element (the jacobian) everywhere but in a set of measure zero.
+%\end{proposition}
+%As shown in \cite{amos2017optnet}, the relevant gradients with respect to the parameters to be trained can be obtained from the KKT set of equations \eqref{eq:kkt}. Hence, backward passes are possible and backpropagation can be performed to optimize all of the NN parameters.
 
 \subsection{Properties of the approximator}
 
@@ -415,3 +435,5 @@ In order to assess the complexity of the learned controller, its L2 layer was co
 \end{figure}
 
 \clearpage
+
+\section{Conclusions and outlook}
